--- a/src/index.css
+++ b/src/index.css
@@ -228,16 +228,38 @@ body.modeChange {
   font-weight: 400;
   min-height: 26px;
 }
-
+.cardWrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
 .projects .card {
   width: 270px;
   text-align: center;
   /* box-shadow: 5px 5px 17px #584194; */
   border-radius: 10px;
   transition: 0.3s linear;
+  position: relative;  
+}
+.card span{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: #0000007a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+  padding: 0px 3px 3px 3px;
+  border-radius: 3px;
 }
 .projects .card:hover {
   transform: translateY(-8px);
+}
+.sourceC svg{
+  font-size: 15px;
 }
 
 .projects .card img {
